# mbot_dialogue_management

./: .gitignore  CMakeLists.txt  package.xml  setup.py
common/src/mbot_dialogue_management/: mbot_dialogue_management_common.py  mbot_dialogue_management_common_v2.py  task_ontology.json
ros/config/: config_mbot_dialogue_management.yaml
ros/doc/: README.md
ros/launch/: mbot_dialogue_management.launch
ros/scripts/: mbot_dialogue_management_node
ros/src/mbot_dialogue_management_ros/: mbot_dialogue_management_node.py
